Fix problem on mobile view.

--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -7,6 +7,10 @@ html, body {
   height: 100%;
 }
 
+section {
+  box-sizing: border-box;
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
