--- a/dev/scss/sections/_testimonials.scss
+++ b/dev/scss/sections/_testimonials.scss
@@ -1,20 +1,31 @@
 .testimonials {
   background: #f9f9f9;
   padding-bottom: 12px;
+  position: relative;
 
   @media (max-width: 725px) {
     padding-bottom: 50px;
   }
 
+  @media (max-width: 390px) {
+    min-height: 500px;
+  }
+
   .content_title {
     margin-bottom: 45px;
+  }
+
+  .container {
+    position: static;
   }
 }
 
 .testimonials_content {
   width: 350px;
 
-
+  @media (max-width: 390px) {
+    width: 250px;
+  }
 }
 
 .testimonials_icon-wrapper {
@@ -57,6 +68,8 @@
 
   @media (max-width: 725px) {
     @include hcenter();
+
+    margin-left: 0;
   }
 
 }
